2003-02-14  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-ppc-macosx-1.mk: --disbale-ucsim

2003-02-13  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-ppc-macosx-1.mk: added
	* components/sdcc.mk: regression test of gbz80 disabled because of (sim?) problems
	* lib/cross.mk: don't touch TARGETCC and TARGETCXX, if it has already been set by local/*.mk

2003-02-11  Bernhard Held <bernhard@bernhardheld.de>

	* support/readme-snapshot.txt: new file; will be the only file in the
	snapshot archives' share/doc
	* components/sdcc.mk: new target sdcc-docs; it cleans the doc dir after
	install and copies readme-snapshot.txt to this dir

2003-02-08  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: create directory $BUILDROOT
	* check before each cvs co, if pserver passwd in ~/.cvspass; if not: login
	* lib/bootstrap: include tidy-up-win32-release.sh; recode installed in ~/local 
